fixed text alignment in baoout us

--- a/client/src/components/AboutRight/AboutRight.module.css
+++ b/client/src/components/AboutRight/AboutRight.module.css
@@ -65,6 +65,7 @@
 
   .content {
     font-size: 0.95rem; /* Smaller content */
+    text-align: left;
   }
 
   .wrapper::before {
